# MiniProjetC

./: CMakeLists.txt  main.c  readme.md
actions/: actions.c  actions.h
application/: main.c  repertoire.txt
utils/: conio.c  tools.c  tools.h
